examples/invalid/unsed_secret.reqlang
#!/usr/bin/env reqlang

vars = []
secrets = ["base_url"]

[envs]

[prompts]
---
GET / HTTP/1.1
---
HTTP/1.1 200 OK

---
